--- a/requirements-python3/requirements.txt
+++ b/requirements-python3/requirements.txt
@@ -149,6 +149,7 @@ text-unidecode==1.2       # via faker
 tinycss2==1.0.2           # via cairosvg, cssselect2, weasyprint
 tinys3==0.1.12
 tropo-webapi-python==0.1.3
+git+git://github.com/dimagi/turn-python.git
 twilio==6.5.1
 ua-parser==0.8.0          # via user-agents
 unidecode==0.04.20
